test/syntax-errors/duplicate-data-type-names/duplicate-data-type-names.foster
main = { () };

type case DT of $DT0 ;

type case DT of $DTX ;
